TS-4299 Allows for the content length to be processed even with C: close

This closes #549